--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Frontend test for cornershop app",
   "main": "index.js",
   "scripts": {
-    "start" : "node index.js"
+    "start": "node index.js",
+    "build": "./node_modules/.bin/webpack  --config ./webpack.config.js"
   },
   "author": "Javier Vasquez",
   "license": "ISC",
@@ -13,6 +14,20 @@
     "compression": "^1.6.2",
     "express": "^4.14.1",
     "lodash": "^4.17.4",
-    "morgan": "^1.8.1"
+    "morgan": "^1.8.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.0.0",
+    "react-hot-loader": "^4.8.5",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.31.0",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.3.1"
   }
 }
