--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "build": "./node_modules/.bin/webpack  --config ./webpack.config.js"
+    "build": "./node_modules/.bin/webpack  --config ./webpack.config.js",    
+    "dev": "webpack-dev-server --config ./webpack.config.js --mode development "
   },
   "author": "Javier Vasquez",
   "license": "ISC",
