--- a/package.json
+++ b/package.json
@@ -5,22 +5,27 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "build": "./node_modules/.bin/webpack  --config ./webpack.config.js",    
+    "build": "./node_modules/.bin/webpack  --config ./webpack.config.js",
     "dev": "webpack-dev-server --config ./webpack.config.js --mode development "
   },
   "author": "Javier Vasquez",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "body-parser": "^1.16.1",
     "compression": "^1.6.2",
     "express": "^4.14.1",
     "lodash": "^4.17.4",
     "morgan": "^1.8.1",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
+    "@babel/plugin-proposal-class-properties": "^7.5.0",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
